Feat: transformed the existing database into a we-based spring boot application and implemented RES and Graph APIs